# external-postgres

./: .env.example  .gitignore  Cargo.toml  Justfile  README.md  docker-compose.yaml  manifest.yaml  sqlx-data.json
.github/workflows/: build.yaml  lint.yaml
debian/: service
manifests/: constant.yaml  from-secret.yaml
queries/: authentication-query-exists.sql  authentication-query-function.sql  schema-setup.sql  user-permissions.sql
src/: cli.rs  constants.rs  lib.rs  logging.rs  main.rs  models.rs  server.rs
src/client/: database.rs  mod.rs  operator.rs
src/server/: controller.rs  database.rs  http.rs  kube.rs  operator.rs
src/server/http/: database.rs  error.rs  operator.rs
systemd/: external-postgres.service
