[package]
name = "external-postgres"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.6", features = ["derive", "env"] }
color-eyre = "0.6.2"
dotenvy = "0.15.6"
eyre = "0.6.8"
tokio = { version = "1.25.0", features = ["macros", "rt", "rt-multi-thread"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "registry"] }
