[package]
name = "external-postgres"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

[dependencies]
axum = { version = "0.6.8", default-features = false, features = ["http1", "http2", "json", "query", "tokio"] }
clap = { version = "4.1.6", features = ["derive", "env"] }
color-eyre = "0.6.2"
dotenvy = "0.15.6"
eyre = "0.6.8"
futures = "0.3.26"
k8s-openapi = { version = "0.17.0", features = ["v1_25"] }
kube = { version = "0.79.0", features = ["client", "derive", "runtime"] }
parking_lot = { version = "0.12.1", features = ["arc_lock"] }
reqwest = { version = "0.11.14", default-features = false, features = ["json", "rustls"] }
schemars = "0.8.11"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
shellexpand = "3.0.0"
sqlx = { version = "0.6.2", features = ["macros", "migrate", "offline", "postgres", "runtime-tokio-rustls"] }
thiserror = "1.0.38"
tokio = { version = "1.25.0", features = ["macros", "rt", "rt-multi-thread", "signal"] }
tower-http = { version = "0.4.0", default-features = false, features = ["request-id", "trace"] }
tracing = { version = "0.1.37", features = ["log"] }
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "registry"] }
url = "2.3.1"
uuid = { version = "1.3.0", features = ["v4"] }
